# my_rag

./: LICENSE  Makefile  README.md  pyproject.toml
src/: __main__.py
src/models/: dataset.py  question.py  result.py
