[project]
name = "rag-against-the-machine"
version = "1.0.0"
description = "Retrieval Augmented Generation"
requires-python = ">=3.10, <3.11"
dependencies = [
    "pydantic>=2.0.0",
    "tqdm>=4.67.1",
    "fire>=0.7.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false
